--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; url=resume.pdf">
     <link rel="canonical" href="resume.pdf">
-    <title>Resume - Redirecting...</title>
+    <title>Jon Hermansen</title>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="resume.pdf">click here to view the resume</a>.</p>
